--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.9.0",
     "axios": "^1.7.9",
     "mongoose": "^8.9.4",
     "nuxt": "^3.15.1",
+    "pinia": "^2.3.0",
     "vue": "latest",
     "vue-router": "latest"
   },
